feat: make semantic validation to work on vocabulary file (#166)